[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=djiiif --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
branch = true
source = ["djiiif"]
omit = ["djiiif/templatetags/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
